--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,11 +1,9 @@
 {
-    "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
-    "packages": {
-        ".": {
-            "release-type": "simple",
-            "extra-files": [
-                "package.json"
-            ]
-        }
+  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
+  "packages": {
+    ".": {
+      "release-type": "simple",
+      "extra-files": ["package.json"]
     }
+  }
 }
