chore: preparing package release

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "reev-frontend-lib",
+  "name": "@bihealth/reev-frontend-lib",
   "version": "0.4.0",
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bihealth/reev-frontend-lib.git"
+  },
   "scripts": {
     "test:unit": "vitest --coverage",
     "test:unit:nocov": "vitest",
@@ -9,6 +12,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/ *.ts *.mts *.json",
     "format:check": "prettier --list-different src/ *.ts *.mts *.json"
+  },
+  "publishConfig": {
+    "@bihealth:registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
     "@mdi/font": "^7.3.67",
