--- a/package.json
+++ b/package.json
@@ -1,77 +1,73 @@
 {
   "name": "@bihealth/reev-frontend-lib",
+  "private": false,
   "version": "0.4.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/bihealth/reev-frontend-lib.git"
   },
-  "scripts": {
-    "test:unit": "vitest --coverage",
-    "test:unit:nocov": "vitest",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/ *.ts *.mts *.json",
-    "format:check": "prettier --list-different src/ *.ts *.mts *.json"
-  },
   "publishConfig": {
     "@bihealth:registry": "https://npm.pkg.github.com"
   },
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/reev-frontend-lib.umd.js",
+  "module": "./dist/reev-frontend-lib.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/reev-frontend-lib.es.js",
+      "require": "./dist/reev-frontend-lib.umd.js"
+    },
+    "./dist/reev-frontend-lib.css": {
+      "import": "./dist/reev-frontend-lib.css",
+      "require": "./dist/reev-frontend-lib.css"
+    },
+    "./dist/reev-frontend-lib.min.css": {
+      "import": "./dist/reev-frontend-lib.min.css",
+      "require": "./dist/reev-frontend-lib.min.css"
+    },
+    "./dist/reev-frontend-lib.scss": {
+      "import": "./dist/reev-frontend-lib.scss",
+      "require": "./dist/reev-frontend-lib.scss"
+    }
+  },
+  "types": "./dist/main.d.ts",
+  "scripts": {
+    "test:unit": "vitest --coverage",
+    "test:unit:nocov": "vitest",
+    "build": "vue-tsc && vite build",
+    "type-check": "vue-tsc --noEmit --composite false",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/ *.ts *.json",
+    "format:check": "prettier --list-different src/ *.ts *.json"
+  },
   "dependencies": {
-    "@mdi/font": "^7.3.67",
-    "@reactgular/chunks": "^1.0.1",
-    "@sentry/browser": "^7.90.0",
-    "@sentry/integrations": "^7.90.0",
-    "@sentry/tracing": "^7.89.0",
-    "@sentry/vue": "^7.89.0",
-    "@types/luxon": "^3.3.7",
-    "@vue/eslint-config-standard": "^8.0.1",
-    "@vuelidate/core": "^2.0.3",
-    "@vuelidate/validators": "^2.0.4",
-    "fast-deep-equal": "^3.1.3",
-    "igv": "^2.15.11",
-    "lodash": "^4.17.21",
-    "luxon": "^3.4.4",
-    "mitt": "^3.0.1",
-    "pinia": "^2.1.7",
-    "title-case": "^4.2.0",
-    "vega": "^5.26.1",
-    "vega-embed": "^6.24.0",
-    "vue": "^3.3.13",
-    "vue-matomo": "^4.2.0",
-    "vue-router": "^4.2.5",
-    "vuetify": "^3.4.8"
+    "vite-plugin-css-injected-by-js": "^3.3.1",
+    "vite-plugin-static-copy": "^1.0.1",
+    "vue": "^3.3.11"
   },
   "devDependencies": {
-    "@pinia/testing": "^0.1.3",
     "@rushstack/eslint-patch": "^1.6.1",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@tsconfig/node18": "^18.2.2",
-    "@types/jsdom": "^21.1.6",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "^20.10.5",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vitest/coverage-istanbul": "^1.1.0",
     "@vitest/coverage-v8": "^1.2.1",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-standard": "^8.0.1",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.3",
-    "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.2",
-    "jsdom": "^23.0.1",
-    "npm-check-updates": "^16.14.12",
-    "npm-run-all": "^4.1.5",
+    "path": "^0.12.7",
     "prettier": "^3.1.1",
-    "resize-observer-polyfill": "^1.5.1",
-    "sass": "^1.69.5",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "sass": "^1.56.2",
+    "terser": "^5.16.6",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
-    "vite-plugin-vuetify": "^2.0.1",
-    "vitest": "^1.1.0",
-    "vitest-canvas-mock": "^0.3.3",
-    "vitest-fetch-mock": "^0.2.2",
-    "vue-cli-plugin-vuetify": "~2.5.8",
-    "vue-tsc": "^1.8.25"
+    "vite-plugin-dts": "^1.7.1",
+    "vite-plugin-sass-dts": "^1.2.7",
+    "vitest": "^1.2.1",
+    "vue-tsc": "^1.0.11"
   }
 }
