feat: initial storybook setup

--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "test:unit:nocov": "vitest",
     "build": "vue-tsc && vite build",
     "type-check": "vue-tsc --noEmit --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/ *.ts *.json",
-    "format:check": "prettier --list-different src/ *.ts *.json"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.mdx --fix --ignore-path .gitignore",
+    "format": "prettier --write .storybook src/ *.ts *.json *.cjs",
+    "format:check": "prettier --list-different .storybook src/ *.ts *.json *.cjs",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "vite-plugin-css-injected-by-js": "^3.3.1",
@@ -50,6 +52,14 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.6.1",
+    "@storybook/addon-essentials": "^7.6.10",
+    "@storybook/addon-interactions": "^7.6.10",
+    "@storybook/addon-links": "^7.6.10",
+    "@storybook/blocks": "^7.6.10",
+    "@storybook/test": "^7.6.10",
+    "@storybook/vue3": "^7.6.10",
+    "@storybook/vue3-vite": "^7.6.10",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vitest/coverage-v8": "^1.2.1",
@@ -57,11 +67,16 @@
     "@vue/eslint-config-standard": "^8.0.1",
     "@vue/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.56.0",
+    "eslint-plugin-mdx": "^3.1.5",
+    "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-vue": "^9.19.2",
     "path": "^0.12.7",
     "prettier": "^3.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup-plugin-typescript2": "^0.34.1",
     "sass": "^1.56.2",
+    "storybook": "^7.6.10",
     "terser": "^5.16.6",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
