--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "vite-plugin-css-injected-by-js": "^3.3.1",
     "vite-plugin-static-copy": "^1.0.1",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "vuetify": "^3.5.1"
   },
   "devDependencies": {
     "@protobuf-ts/plugin": "^2.9.3",
