--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
   },
   "types": "./dist/main.d.ts",
   "scripts": {
-    "test:unit": "vitest --coverage",
-    "test:unit:nocov": "vitest",
+    "test:unit": "vitest --config vitest.config.mts --coverage",
+    "test:unit:nocov": "vitest --config vitest.config.mts",
     "build": "vue-tsc && vite build",
     "type-check": "vue-tsc --noEmit --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.mdx --fix --ignore-path .gitignore",
-    "format": "prettier --write .storybook src/ *.ts *.json *.cjs",
-    "format:check": "prettier --list-different .storybook src/ *.ts *.json *.cjs",
+    "format": "prettier --write .storybook src/ *.json *.cjs",
+    "format:check": "prettier --list-different .storybook src/ *.json *.cjs",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -63,6 +63,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vitest/coverage-istanbul": "^1.2.1",
     "@vitest/coverage-v8": "^1.2.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-standard": "^8.0.1",
@@ -71,6 +72,7 @@
     "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-vue": "^9.19.2",
+    "jsdom": "^24.0.0",
     "path": "^0.12.7",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
