--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "vuetify": "^3.5.1"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.1.3",
     "@protobuf-ts/plugin": "^2.9.3",
     "@rushstack/eslint-patch": "^1.6.1",
     "@storybook/addon-essentials": "^7.6.10",
@@ -70,6 +71,7 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-standard": "^8.0.1",
     "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.4",
     "eslint": "^8.56.0",
     "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-storybook": "^0.6.15",
@@ -88,6 +90,7 @@
     "vite-plugin-dts": "^1.7.1",
     "vite-plugin-sass-dts": "^1.2.7",
     "vitest": "^1.2.1",
+    "vitest-canvas-mock": "^0.3.3",
     "vue-tsc": "^1.0.11"
   }
 }
