--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@protobuf-ts/runtime": "^2.9.3",
+    "vega": "^5.27.0",
+    "vega-embed": "^6.24.0",
     "vite-plugin-css-injected-by-js": "^3.3.1",
     "vite-plugin-static-copy": "^1.0.1",
     "vue": "^3.3.11",
