--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@protobuf-ts/runtime": "^2.9.3",
+    "title-case": "^4.3.1",
     "vega": "^5.27.0",
     "vega-embed": "^6.24.0",
     "vite-plugin-css-injected-by-js": "^3.3.1",
