--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@protobuf-ts/runtime": "^2.9.3",
+    "@reactgular/chunks": "^1.0.1",
     "@types/luxon": "^3.4.2",
     "luxon": "^3.4.4",
     "title-case": "^4.3.1",
@@ -97,6 +98,7 @@
     "vite-plugin-sass-dts": "^1.3.17",
     "vitest": "^1.2.2",
     "vitest-canvas-mock": "^0.3.3",
+    "vitest-fetch-mock": "^0.2.2",
     "vue-tsc": "^1.8.27"
   }
 }
