--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "vite-plugin-css-injected-by-js": "^3.3.1",
     "vite-plugin-static-copy": "^1.0.1",
     "vue": "^3.4.15",
+    "vue-router": "^4.2.5",
     "vuetify": "^3.5.1"
   },
   "devDependencies": {
