--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -38,12 +38,10 @@ jobs:
         with:
           node-version: "20.x"
           cache: "npm"
-          registry-url: https://npm.pkg.github.com/
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Publish
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.BOT_TOKEN }}
+      - uses: JS-DevTools/npm-publish@v3
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
