--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "version": "0.4.2",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bihealth/reev-frontend-lib.git"
+    "url": "git+https://github.com/bihealth/reev-frontend-lib.git"
   },
   "type": "module",
   "files": [
