--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "@protobuf-ts/runtime": "^2.9.3",
     "@reactgular/chunks": "^1.0.1",
     "@types/luxon": "^3.4.2",
+    "downsample": "^1.4.0",
     "igv": "^2.15.11",
     "luxon": "^3.4.4",
+    "plotly.js-dist": "^2.29.0",
     "title-case": "^4.3.1",
     "vega": "^5.27.0",
     "vega-embed": "^6.24.0",
