--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-vue": "^9.21.1",
     "jsdom": "^24.0.0",
+    "jsdom-worker": "^0.3.0",
     "path": "^0.12.7",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
