--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "@protobuf-ts/runtime": "^2.9.3",
     "@reactgular/chunks": "^1.0.1",
     "@types/luxon": "^3.4.2",
+    "downsample": "^1.4.0",
     "igv": "^2.15.11",
     "luxon": "^3.4.4",
+    "plotly.js-dist": "^2.29.0",
     "title-case": "^4.3.1",
     "vega": "^5.27.0",
     "vega-embed": "^6.24.0",
@@ -87,6 +89,7 @@
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-vue": "^9.21.1",
     "jsdom": "^24.0.0",
+    "jsdom-worker": "^0.3.0",
     "path": "^0.12.7",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
