--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -16,4 +16,4 @@ jobs:
           PR_URL: ${{github.event.pull_request.html_url}}
           # GitHub provides this variable in the CI env. You don't
           # need to add anything to the secrets vault.
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
