--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -22,29 +22,29 @@ jobs:
         with:
           token: ${{ secrets.BOT_TOKEN }}
 
-  Package-Release:
-    needs: release-please
-    runs-on: ubuntu-latest
-    if: ${{ needs.release-please.outputs.release_created }}
-    permissions:
-      packages: write
-      contents: read
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  # Package-Release:
+  #   needs: release-please
+  #   runs-on: ubuntu-latest
+  #   if: ${{ needs.release-please.outputs.release_created }}
+  #   permissions:
+  #     packages: write
+  #     contents: read
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
 
-      - name: Set up node 20.x
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
+  #     - name: Set up node 20.x
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: "20.x"
+  #         cache: "npm"
 
-      - name: Install dependencies
-        run: npm ci
+  #     - name: Install dependencies
+  #       run: npm ci
 
-      - name: Build package to dist/
-        run: npm run build
+  #     - name: Build package to dist/
+  #       run: npm run build
 
-      - uses: JS-DevTools/npm-publish@v3
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
+  #     - uses: JS-DevTools/npm-publish@v3
+  #       with:
+  #         token: ${{ secrets.NPM_TOKEN }}
