--- a/package.json
+++ b/package.json
@@ -40,12 +40,13 @@
     "build": "vue-tsc && vite build",
     "type-check": "vue-tsc --noEmit --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.mdx --fix --ignore-path .gitignore --ignore-pattern 'src/pbs/google/protobuf/*'",
-    "format": "prettier --write .storybook src/ *.json *.cjs *.mts",
+    "format": "prettier --write .storybook ext/ src/ *.json *.cjs *.mts",
     "format:check": "prettier --list-different .storybook src/ *.json *.cjs *.mts",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@hey-api/client-fetch": "^0.2.4",
     "@mdi/font": "^7.4.47",
     "@protobuf-ts/runtime": "^2.9.3",
     "@reactgular/chunks": "^1.0.1",
@@ -65,6 +66,7 @@
     "vuetify": "^3.5.7"
   },
   "devDependencies": {
+    "@hey-api/openapi-ts": "^0.52.11",
     "@pinia/testing": "^0.1.3",
     "@protobuf-ts/plugin": "^2.9.3",
     "@rushstack/eslint-patch": "^1.7.2",
