--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "build": "vue-tsc && vite build",
     "type-check": "vue-tsc --noEmit --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.mdx --fix --ignore-path .gitignore --ignore-pattern 'src/pbs/google/protobuf/*'",
-    "format": "prettier --write .storybook ext/ src/ *.json *.cjs *.mts",
+    "format": "prettier --write .storybook src/ *.json *.cjs *.mts",
     "format:check": "prettier --list-different .storybook src/ *.json *.cjs *.mts",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -63,7 +63,7 @@
     "vite-plugin-vuetify": "^2.0.1",
     "vue": "^3.4.18",
     "vue-router": "^4.3.0",
-    "vuetify": "^3.5.7"
+    "vuetify": "^3.7.4"
   },
   "devDependencies": {
     "@hey-api/openapi-ts": "^0.54.4",
